fix: remove MaxPermSize from server launch scripts